# AI-Investment-Bot

./: .env.example  .gitignore  CLAUDE.md  README.md  UPGRADE_PLAN.md  pyproject.toml  requirements.txt
ai_investment_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dashboard/: crypto_data.json  index.html  kr_data.json  predictions_data.json  regime_data.json  us_data.json
data/: quant_bot.db-info  quant_bot.db-shm  quant_bot.db-wal
deploy/: bot.service
docs/: CODE_REVIEW.md  CURRENT_STATE.md  DEPLOYMENT.md  HANDOVER.md  MARKETING_MONETIZATION_PLAN.md  ROADMAP.md
scripts/: bot.py  build_universe.py  check_backtest.py  check_crypto.py  check_fundamentals.py  check_korea.py  check_macro.py  check_market_regime.py  check_portfolio.py  check_predictions.py  check_risk.py  check_signals.py  daily_update.py  demo_exceptions.py  demo_http.py  diag_fmp.py  export_dashboard.py  hello_world.py  scan.py  screen_value.py  send_digest.py  server_autopull.sh  start_bot.bat  start_bot.sh  telegram_setup.py  turso_setup.py
src/: __init__.py  backtest.py  bot_commands.py  bot_interface.py  config.py  data_fetcher.py  digest.py  exceptions.py  findings.py  http.py  llm.py  logger.py  macro_analyzer.py  notifier.py  portfolio.py  predictors.py  risk_engine.py  screener.py  signals.py  storage.py  subscribers.py  universe.py  utils.py
tests/: conftest.py  test_backtest.py  test_bot_commands.py  test_bot_loop.py  test_dart.py  test_data_fetcher.py  test_digest.py  test_exceptions.py  test_export_dashboard.py  test_findings.py  test_http.py  test_llm.py  test_macro_analyzer.py  (+11 more)
(+2 files in other folders)
